tests/error/array_init_overflow.vbc
// 预期：应对初始化项过多报「初始化列表包含」错误

int main() {
    int arr[2] = {1, 2, 3};
    return 0;
}

main();
